--- a/custom.html
+++ b/custom.html
@@ -11,29 +11,29 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Click here to choose your box</a>
+    <a class="navbar-brand" href="#">Lucky Box</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Filmbox<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="custom.html">Boxes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Candybox</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Stationarybox</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Customers
+                    Login
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Register</a>
-                    <a class="dropdown-item" href="#">Login</a>
-                    <a class="dropdown-item" href="#">Customize box</a>
+                    <a class="dropdown-item" href="Login.html">Login</a>
+                    <a class="dropdown-item" href="register.html">Register</a>
+
                 </div>
             </li>
         </ul>
@@ -203,6 +203,14 @@
 
 
 </div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+
+
 
 </body>
 </html>
