--- a/index.html
+++ b/index.html
@@ -12,35 +12,36 @@
 
 <header>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Click here to choose your box</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Lucky Box</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Filmbox<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Candybox</a>
+                    <a class="nav-link" href="custom.html">Boxes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Stationarybox</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Customers
+                        Login
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Register</a>
-                        <a class="dropdown-item" href="#">Login</a>
-                        <a class="dropdown-item" href="#">Customize box</a>
+                        <a class="dropdown-item" href="Login.html">Login</a>
+                        <a class="dropdown-item" href="register.html">Register</a>
+
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
+
 
 </header>
 
@@ -68,7 +69,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="img/stationary.jpg" class="d-block w-100" alt="changing picture">
+            <img src="img/crafting.jpg" class="d-block w-100" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Stationary box</h5>
                 <p>Customize your Stationary box here and choose your favourite items</p>
