--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form">
-                <form>
+                <form action="https://formspree.io/xaynkalb" method="POST">
 
                     <h1>Contact us!</h1>
                     <p> voice your concerns, or simply drop a nice comment.</p>
@@ -82,7 +82,7 @@
                         <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="short description"></textarea>
                     </div>
 
-                    <button type="button" class="btn btn-info">Submit</button>
+                 <button class="btn" type="submit" value="submit">submit</button>
 
 
                 </form>
