--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
 
 
 
-
+<h1>Register</h1>
 <form>
     <div class="form-row">
         <div class="form-group col-md-6">
@@ -63,11 +63,11 @@
     </div>
     <div class="form-group">
         <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        <input type="text" class="form-control" id="inputAddress" placeholder="">
     </div>
     <div class="form-group">
         <label for="inputAddress2">Address 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+        <input type="text" class="form-control" id="inputAddress2" placeholder="">
     </div>
     <div class="form-row">
         <div class="form-group col-md-6">
