--- a/custom.html
+++ b/custom.html
@@ -41,14 +41,20 @@
     </div>
 </nav>
 
+
+
+
+  <!-- ///////////////////////////////////BEGINNING OF BOX SIZES -->
+
 <h1 id="title" class="text-left pb-4 pl-2">Customize your box</h1>
-<!-- ///////////////////////////////////BEGINNING OF BOX SIZES -->
+
 <div id="step1box" class="container-fluid">
 <div class="ml-3">
 
 
      <div class="container row">
-         </p><h2 class="step text-muted"> Step 1</h2> <h2> choose your box size</h2>
+         <h2 class="step text-muted"> Step 1</h2>
+         <h2> choose your box size</h2>
      </div>
 </div>
 
@@ -82,33 +88,54 @@
 
 <div class="ml-3">
 
-    <div class="container row"></p><h2 class="step text-muted"> Step 2</h2> <h2>Select the themes you like!</h2></div>
-</div>
-</div>
-    <h6> it is possible to add items from multiple topics to your box!!</h6>
-    <div class="row mt-4 pb-5 topics" >
-        <!-- 3 large colums with text centered -->
-        <div class="col-lg-4 text-center">
-            <!-- rounded circle zorgt dat img in cirkel gecropt wordt -->
-            <img class="rounded-circle" src="img/movies.jpg" alt="Generic placeholder image" width="140" height="140">
-            <h2>Movies and Series</h2>
-            <p>gadgets and loot related to movies</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View items</a></p>
-        </div>
-        <div class="col-lg-4 text-center">
-            <img class="rounded-circle" src="img/snacks.jpg" width="140" height="140">
-            <h2>Snacks</h2>
-            <p>Candy and Snacks from across the globe</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View items</a></p>
-        </div><!-- /.col-lg-4 text-center -->
-        <div class="col-lg-4 text-center">
-            <img class="rounded-circle" src="img/hobby.jpg" width="140" height="140">
-            <h2>Hobby</h2>
-            <p>All things you need for your favorite hobby</p>
-            <p><a class="btn btn-secondary" href="#topics" role="button">pick this one &raquo;</a></p>
-        </div>
+    <div class="container row">
+        <h2 class="step text-muted"> Step 2</h2>
+        <h2>Select the themes you like!</h2>
     </div>
 </div>
+    <h6> it is possible to add items from multiple topics to your box!!</h6>
+
+
+
+
+<div id="carouselExampleControls" class="carousel slide w-50" data-ride="carousel">
+    <div class="carousel-inner ">
+        <div class="carousel-item active">
+            <img class="d-block w-auto" src="img/moviebanner.jpg" height="300px" alt="First slide">
+                <div class="carousel-caption">
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Movies</a></p>
+                </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-auto" src="img/snackbanner.png" height="300px" width="100%" alt="Second slide">
+
+                <div class="carousel-caption">
+
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Snacks</a></p>
+                </div>
+
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-auto" src="img/hobbybanner.jpg" height="300px" width="100%" alt="Third slide">
+
+                <div class="carousel-caption">
+
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Hobby</a></p>
+
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+
 
 <!-- ///////////////////////////////////BEGINNING OF items -->
 
@@ -118,26 +145,26 @@
 
 
     <div class="row" id="movierow">
-        <div class="imgxt">
-        <img  src="img/moviegadget1.jpg" width="200" height="200">
+        <div class="hover01">
+        <figure> <img src="img/moviegadget1.jpg" width="200" height="200"> </figure>
             <div>
                 <label><input type="checkbox" /> baby yoda</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/moviegadget2.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/moviegadget2.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> spider-man t-shirt</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/moviegadget3.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/moviegadget3.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> car back to the future</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/moviegadget4.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/moviegadget4.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> James Bond Q pin</label>
             </div>
@@ -148,26 +175,26 @@
 
     <div class="row" id="snackrow">
 
-        <div class="imgxt">
-            <img  src="img/snack1.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/snack1.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> Reese's Pieces</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/snack2.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/snack2.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> Poppin Cooking Sushi</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/snack3.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/snack3.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> Lays Thai Chili</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/snack4.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/snack4.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> Original Beef Jerky</label>
             </div>
@@ -176,26 +203,26 @@
 
 
     <div class="row" id="hobbyrow">
-        <div class="imgxt">
-            <img  src="img/hobby1.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/hobby1.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> Panthera Ink</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/hobby2.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/hobby2.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> Loctite super glue</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/hobby3.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/hobby3.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> acrylic paint set</label>
             </div>
         </div>
-        <div class="imgxt">
-            <img  src="img/hobby4.jpg" width="200" height="200">
+        <div class="hover01">
+            <figure><img  src="img/hobby4.jpg" width="200" height="200"></figure>
             <div>
                 <label><input type="checkbox" /> Human Limb figure</label>
             </div>
