--- a/contact.html
+++ b/contact.html
@@ -51,115 +51,99 @@
     </div>
 </nav>
 
-<!-- featurette -->
+<!-- page content -->
 
-
-
-
-
-<!-- contact form -->
-
-<div  id=mainContainer class="container container-contact1 mt-10 ">
+<div class="container">
     <div class="row">
         <div class="col-md-6">
-            <div class="form">
-                <form action="https://formspree.io/xaynkalb" method="POST">
+            <!-- contact form -->
+            <form action="https://formspree.io/xaynkalb" method="POST">
 
-                    <h1>Contact us!</h1>
-                    <p> voice your concerns, or simply drop a nice comment.</p>
+                <h1>Contact us!</h1>
+                <p> voice your concerns, or simply drop a nice comment.</p>
 
-                    <input class="input1" type="text" name="name" placeholder="Name"/>
-                    <label  class="label-name"><span class="content-name"></span></label>
+                <input class="input1" type="text" name="name" placeholder="Name"/>
+                <label  class="label-name"><span class="content-name"></span></label>
 
-                    <div class="wrap-input1 required">
+                <div class="wrap-input1 required">
                     <input class="input1" type="text" name="email" placeholder="Email">
                     <span></span>
-                    </div>
+                </div>
 
 
 
-                    <div class="wrap-input1 validate-input" data-validate="Subject is required">
+                <div class="wrap-input1 validate-input" data-validate="Subject is required">
                     <input class="input1" type="text" name="subject" placeholder="Subject">
                     <span class="shadow-input1"></span>
-                     </div>
+                </div>
 
 
-                    <div class="form-group">
-                        <label for="exampleTextarea"></label>
-                        <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="short description"></textarea>
-                    </div>
+                <div class="form-group">
+                    <label for="exampleTextarea"></label>
+                    <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="short description"></textarea>
+                </div>
 
-                 <button id=buttonform class="btn" type="submit" value="submit" >submit</button>
-
-
-                </form>
-
-            </div>
+                <button id=buttonform class="btn" type="submit" value="submit" >submit</button>
+            </form>
         </div>
-
-
-<!--contact links-->
-
         <div class="col-md-6">
-            <div class="container-fluid">
-                <div class="row d-flex flex-column">
-
-                        <div class="social" class=" d-flex flex-row">
-                            <div class="img-thumbnail">
-                             <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-02.png">
-                            </div>
-                             <div>
-                                <h3>Call us!</h3>
-                                 <a href="tel:+1-303-499-7111">+1 (303) 499-7111</a>
-                                <p>Our customer service is available 24/7</p>
-                             </div>
-                        </div>
+            <!--contact links-->
+            <img class="img-fluid" class="img-thumbnail"  alt="Responsive image" src="ICONS/social-02.png">
 
 
-                        <div class="social" class="d-flex flex-row">
-
-                            <div class="img-thumbnail">
-                                <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-01.png">
-                            </div>
-                                <div class="email-info">
-                                    <h3>Or send us an email</h3>
-                                    <a href="mailto:info@lucky.box.com">Info@luckybox.com</a>
-                                </div>
-                            </div>
-
-                            <div  id="social" class="map">
-                                <div class="map d-flex flex-row">
-                                    <div>
-                                        <h3>Pay us a visit!</h3>
-                                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3504.721672565506!2d4.404880346693864!3d51.21711684087369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbox!5e0!3m2!1sen!2sbe!4v1576057139126!5m2!1sen!2sbe"   style="border:0;" ></iframe>
-                                    </div>
-                                </div>
-                        </div>
-                 </div>
+            <div>
+                <h3>Call us!</h3>
+                <a href="tel:+1-303-499-7111">+1 (303) 499-7111</a>
+                <p>Our customer service is available 24/7</p>
             </div>
+
+
+
+
+            <div class="social" class=" flex-row">
+
+
+                <img class="img-fluid" class="img-thumbnail"  alt="Responsive image" src="ICONS/social-01.png">
+
+                <div class="email-info">
+                    <h3>Or send us an email</h3>
+                    <a href="mailto:info@lucky.box.com">Info@luckybox.com</a>
+                </div>
+
+                <div  id="social" class="map flex-row">
+                    <div>
+                        <h3>Pay us a visit!</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3504.721672565506!2d4.404880346693864!3d51.21711684087369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbox!5e0!3m2!1sen!2sbe!4v1576057139126!5m2!1sen!2sbe" class="border-0"></iframe>
+                    </div>
         </div>
+
+    </div>
 </div>
-</div>
-<a href="#"><i class="fas fa-arrow-up"></i></a>
 
-<!-- footer -->
-    <footer id="sticky-footer" class=" bg-dark text-white-50 ">
-        <div class="container-fluid d-flex py-3">
+<!--footer-->
 
-             <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+<section class="footer">
 
-             <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
+        <a href="#"><i class="fas fa-arrow-up"></i></a>
 
-             <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
-        </div>
+        <footer id="sticky-footer" class=" bg-dark text-white-50 ">
+            <div class="container-fluid d-flex py-3">
 
-    </footer>
+                <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
 
+                <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
+
+                <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
+
+            </div>
+
+        </footer>
+</section>
+<!-- scripts for bootstrap-->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-
-
 </body>
+
 </html>
