--- a/html/contact.html
+++ b/html/contact.html
@@ -15,8 +15,8 @@
 
     <link rel="stylesheet" href="/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="/bootstrap/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="/css/contact.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -100,10 +100,10 @@
 
 
 
-            <div class="social" class=" flex-row">
+            <div  class=" flex-row">
 
 
-                <img class="img-fluid" class="img-thumbnail"  alt="Responsive image" src="ICONS/social-01.png">
+                <img class="img-fluid img-thumbnail"  alt="Responsive image" src="ICONS/social-01.png">
 
                 <div class="email-info">
                     <h3>Or send us an email</h3>
@@ -119,7 +119,8 @@
 
     </div>
 </div>
-
+    </div>
+</div>
 <!--footer-->
 
 <section class="footer">
@@ -131,9 +132,9 @@
 
                 <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
 
-                <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="/ICONS/instaiconwhite-06.png" width="30" height="30" alt="insta icon"></a>
+                <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="../ICONS/instaiconwhite-06.png" width="30" height="30" alt="insta icon"></a>
 
-                <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="/ICONS/twitter.svg" width="30" height="30" alt="twitter icon"></a>
+                <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="../ICONS/twitter.svg" width="30" height="30" alt="twitter icon"></a>
 
             </div>
 
