--- a/html/contact.html
+++ b/html/contact.html
@@ -34,7 +34,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="../html/custom.html">Boxes</a>
             </li>
-            <li class="nav-item  html/contact.html">
+            <li class="nav-item  active">
                 <a class="nav-link" href="../html/contact.html">Contact</a>
             </li>
             <li class="nav-item dropdown">
