--- a/html/custom.html
+++ b/html/custom.html
@@ -21,13 +21,10 @@
 
 <body>
 <!-- navbar-->
-<<<<<<< HEAD
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="../index.html">Lucky Box</a>
-=======
-<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-    <a class="navbar-brand" href="#">Lucky Box</a>
->>>>>>> 19d39661bbd4897985e1e0f46e542ba46661a16b
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -105,7 +102,7 @@
 
 <div class="ml-3">
 
-    <div class="container row steptitle" id="2ndStep">
+    <div class="container row steptitle">
         <h2 class="step stepcount"> Step 2</h2>
         <h2 class="stepInfo">Select the theme you like!</h2>
     </div>
