--- a/html/custom.html
+++ b/html/custom.html
@@ -22,13 +22,10 @@
 <body>
 <!-- navbar-->
 
-<<<<<<< HEAD
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="../index.html">Lucky Box</a>
-=======
-<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-    <a class="navbar-brand" href="#">Lucky Box</a>
->>>>>>> c564f0e97150e101763b68ba3cfb3a0e959259f2
+
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,11 +62,11 @@
 
 <h1  class="text-center pb-4 pl-2 titleRed">Customize your box</h1>
 
-<div  class="container-fluid">
+<div  class="container-fluid bigcontain">
 <div class="ml-3">
 
 <div class="stepalign">
-     <div class="container row steptitle">
+     <div class="container row">
          <h2 class="step stepcount"> Step 1</h2>
          <h2 class="stepInfo"> choose your box size</h2>
      </div>
@@ -104,6 +101,7 @@
 </div>
 <!-- ///////////////////////////////////BEGINNING OF TOPICS -->
 
+<div class="bigcontain">
 
 <div class="ml-3">
 
@@ -152,6 +150,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
+</div>
 </div>
 
 
@@ -256,6 +255,8 @@
     <div class="submitbutton">
     <p><a class="btn btn-primary " href="#2ndStep" role="button">SUBMIT</a></p>
     </div>
+
+</div>
 
 </div>
 
