--- a/html/custom.html
+++ b/html/custom.html
@@ -155,6 +155,8 @@
 
 
 <!-- ///////////////////////////////////BEGINNING OF items -->
+
+<div class="bigcontain">
 <div class="ml-3">
     <div class="container row steptitle">
         <h2 class="step stepcount"> Step 3</h2>
@@ -259,7 +261,6 @@
 </div>
 
 </div>
-
 <!-- footer -->
 <section class="footer">
 
