--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <div class="container2">
 
     <div class="parallax">
-        <h1 class="Luckyboxtitle" >Lucky Box</h1>
+        <br/>
+       <img class="imagepar" src="img/tekst-white-02.png ">
     </div>
 
 
