--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
 <div id="information" >
-    <h1 class="title pb-4">100% Customizable </h1>
+    <div id="blink">  <h1 class="title pb-4">100% Customizable </h1></div>
    <h2> LIMITED QUANTITIES AVAILABLE</h2>
 
    <p> Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets.</p>
